# NSSP-V2

./: .gitignore  CONTRIBUTING.md  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260407_001_access_control_tables.py  20260407_002_sync_clienti.py  20260407_003_sync_clienti_fields.py  20260407_004_sync_destinazioni.py  20260407_005_core_destinazione_config.py  20260407_006_sync_articoli.py  20260407_007_famiglia_articoli.py  20260407_008_famiglia_considera_produzione.py  20260407_009_sync_produzioni_attive.py  20260407_010_sync_produzioni_storiche.py  20260407_011_core_produzioni_override.py  20260408_012_sync_mag_reale.py  20260408_013_core_inventory_positions.py  20260408_014_sync_righe_ordine_cliente.py  20260409_015_core_commitments.py  20260409_016_core_customer_set_aside.py  20260409_017_core_availability.py  20260410_018_famiglia_aggrega_codice.py  20260410_019_articolo_config_overrides.py  20260413_020_core_warning_type_config.py  20260413_021_visible_to_areas.py  20260413_022_stock_policy_config.py  (+8 more)
backend/scripts/: easy_schema_explorer.py  inspect_availability.py  inspect_commitments.py  inspect_stock_policy.py  rebootstrap_mag_reale.py  rebuild_availability.py  rebuild_customer_set_aside.py  rebuild_inventory_positions.py  seed_initial.py  set_stock_policy_params.py  sync_articoli.py  sync_clienti.py  sync_destinazioni.py  sync_mag_reale.py  sync_produzioni_attive.py  sync_produzioni_storiche.py  sync_righe_ordine_cliente.py
backend/tests/: README.md  conftest.py
(+473 files in other folders)
